update server translate

--- a/app/code/Simi/Simicustomize/i18n/ar_KW.csv
+++ b/app/code/Simi/Simicustomize/i18n/ar_KW.csv
@@ -4,3 +4,35 @@
 "Subtotal","المجموع الفرعي"
 "Shipping & Handling","الشحن والتسليم"
 "Grand Total","المبلغ الإجمالي"
+"Could not add the product with SKU %sku to the shopping cart: %message","تعذرت إضافة المنتج مع SKU %sku إلى عربة التسوق: %message"
+"Could not add the product with SKU "%1" to the shopping cart: %2","تعذرت إضافة المنتج مع SKU "%1" إلى عربة التسوق: %2"
+
+"The fewest you may purchase is %1.","أقل ما يمكنك شراؤه هو %1."
+
+"Can't check requested quantity for products without Source Items support.","لا يمكن التحقق من الكمية المطلوبة للمنتجات بدون دعم عناصر المصدر."
+"No linked stock found","لم يتم العثور على مخزون مرتبط"
+"We don't have as many quantity as you requested, but we'll back order the remaining %1.","ليس لدينا الكمية التي طلبتها ، لكننا سنعيد طلب 1% المتبقية."
+"Parameter ""object"" must be present.","Parameter ""object"" must be present."
+"Parameter ""sort_order"" must be present for unrequired conditions.","Parameter ""sort_order"" must be present for unrequired conditions."
+"Condition have to implement IsProductSalableInterface.","يجب أن تنفذ الشرط IsProductSalableInterface."
+"Backorders are disabled","تم تعطيل الطلبات المتأخرة"
+"The fewest you may purchase is %1","أقل ما يمكنك شراؤه هو %1"
+"The requested qty exceeds the maximum qty allowed in shopping cart","تتجاوز الكمية المطلوبة الحد الأقصى للكمية المسموح بها في عربة التسوق"
+"You can buy this product only in quantities of %1 at a time.","يمكنك شراء هذا المنتج بكميات 1% فقط في المرة الواحدة."
+"You cannot use decimal quantity for this product.","لا يمكنك استخدام الكمية العشرية لهذا المنتج."
+"Parameter ""sort_order"" must be present for urequired conditions.","Parameter ""sort_order"" must be present for urequired conditions."
+"Condition have to implement IsProductSalableForRequestedQtyInterface.","يجب أن تنفذ الحالة IsProductSalableForRequestedQtyInterface."
+"The requested sku is not assigned to given stock.","لم يتم تعيين SKU المطلوب لمخزون معين."
+"The requested sku is not assigned to given stock","لم يتم تعيين SKU المطلوب لمخزون معين"
+"The requested qty is not available","الكمية المطلوبة غير متوفرة"
+"Manage stock is enabled","Manage stock is enabled"
+"Condition must implement %1","Condition must implement %1"
+"""%field"" can not be empty.","""%field"" can not be empty."
+"The website with code ""%code"" does not exist.","موقع الويب الذي يحتوي على الكود ""%code "" غير موجود."
+"$scopeId is required","$scopeId مطلوب"
+"$websiteId parameter is required","$websiteId المعلمة مطلوبة"
+"Could not load Sales Channels for Stock","يحتوي السهم على قناة بيع واحدة على الأقل ولا يمكن حذفه."
+"Stock has at least one sale channel and could not be deleted.","يحتوي السهم على قناة بيع واحدة على الأقل ولا يمكن حذفه."
+"Could not replace Sales Channels for Stock","لا يمكن استبدال قنوات المبيعات للأسهم"
+"Wrong condition.","شرط خاطئ."
+"There are no source items with the in stock status","لا توجد عناصر مصدر بحالة المخزون"
